--- a/styles.css
+++ b/styles.css
@@ -286,142 +286,130 @@ footer {
 /* MOBILE */
 
 @media only screen and (max-width: 768px)  {
-    header {
-        padding: 12px 0px 12px 0px;
-        font-family: Montserrat;
-        font-size: 24px;
-        font-weight: 700;
-        text-align: center;
-    }
+header {
+    padding: 0.75rem 0rem 0.75rem 0rem;
+    font-family: Montserrat;
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+}
 
-    .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-       flex-wrap: wrap; 
-        margin: 24px 8px 0px 8px;
-    }
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 1.5rem 0.5rem 0rem 1rem;
+}
 
-    .highlight img {
-        width:  368px;
-        height: 396px;
-        padding: 0px 0px 0px 0px;
-        gap: 10px;
-        border-radius: 10px;
-        align-items: center;
-        text-align: center;
-    }
-    
-    .text-overlay h3 {
-        font-size: 24px;
-        font-weight: 700;
-        text-align: start;
-        line-height: 29.26px;
-        display: block;
-        word-wrap: break-word; 
-        white-space: normal; 
-        max-width: 200px; 
+.highlight img {
+    width: 23rem;
+    height: 24.75rem;
+    padding: 0rem 0rem 0rem 0rem;
+    gap: 0.625rem;
+    border-radius: 0.625rem;
+    align-items: center;
+    text-align: center;
+}
 
-    }
+.text-overlay h3 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: start;
+    line-height: 1.83rem;
+    display: block;
+    word-wrap: break-word;
+    white-space: normal;
+    max-width: 12.5rem;
+}
 
-    .mostRecentPosts{
-        display: flex;
-        align-items: center;
-        border-radius: 10px;
-        background: #02A28F;
-        margin: 0px 8px 12px 0px;
-    }
+.mostRecentPosts {
+    display: flex;
+    align-items: center;
+    border-radius: 0.625rem;
+    background: #02A28F;
+    margin: 0px 0.5rem 0.75rem 0rem;
+}
 
-    .mostRecentPosts h2{
-        margin: 8px 0px 8px 16px;
-        color: #ffffff;
-        font-size: 20px;
-        font-weight: 700;
-        line-height: 24.38px;
-        white-space: nowrap;
-    }
-    
-    .mostRecentPosts a{
-        margin: 0px 0px 0px 50px;
-        color: #ffffff;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: 17.07px;
-        white-space: nowrap;
+.mostRecentPosts h2 {
+    margin: 0.5rem 0rem 0.5rem 1rem;
+    color: #ffffff;
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.525rem;
+    white-space: nowrap;
+}
 
+.mostRecentPosts a {
+    margin: 0rem 0rem 0rem 3.125rem;
+    color: #ffffff;
+    font-size: 0.875rem;
+    font-weight: 500;
+    line-height: 1.067rem;
+    white-space: nowrap;
+}
 
-    }
-    
-    .post {
-        border-radius: 0.5rem;
-        overflow: hidden;
-        margin-right: 8px;
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.13); 
-        margin-bottom: 24px;
-    }
-    .posts {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+.post {
+    border-radius: 0.5rem;
+    overflow: hidden;
+    margin-right: 0.5rem;
+    box-shadow: 0.3125rem 0.3125rem 0.625rem rgba(0, 0, 0, 0.13);
+    margin-bottom: 1.5rem;
+}
 
+.posts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-    .popularPosts{
-        background-color: #02A28F;
-        border-radius: 10px;
-        width: 95%;
-        height: auto;
-        text-align: center;
-        padding: 0px;
-    }
-    
+.popularPosts {
+    background-color: #02A28F;
+    border-radius: 0.625rem;
+    width: 95%;
+    height: auto;
+    text-align: center;
+    padding: 0rem;
+}
 
-    .popularPosts h3 {
-        color: #ffffff;
-        font-size: 20px;
-        font-weight: 700;
-        line-height: 24.38px;
-        padding: 12px 0px 12px 0px;
-        margin-bottom: 0px;
- 
-    }
+.popularPosts h3 {
+    color: #ffffff;
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.525rem;
+    padding: 0.75rem 0rem 0.75rem 0rem;
+    margin-bottom: 0rem;
+}
 
+.sidebarbg {
+    width: 60%;
+    height: auto;
+    box-shadow: 0.3125rem 0.3125rem 0.625rem rgba(0, 0, 0, 0.13);
+    margin: 0.9375rem auto;
+}
 
-    .sidebarbg {
-        background-color: #ffffff;
-        border-radius: 0.5rem;
-        margin: 0px 0px 20px 0px;
-        padding: 13px 95px 13px 12px;
-        width: 60%;
-        height: auto;
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.13);
-        margin: 15px auto;
-    }
+#categories {
+    background: #02A28F;
+    border-radius: 0.625rem;
+    width: 97%;
+    height: auto;
+}
 
+#categories h3 {
+    padding: 0.75rem 0rem 0.75rem 0rem;
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.525rem;
+    color: #ffffff;
+    text-align: center;
+}
 
-    #categories{
-        background: #02A28F;
-        border-radius: 10px;
-        width: 97%;
-        height: auto;
-    }
+.spanCategoriesText {
+    margin-right: 0.5rem;
+}
 
-    #categories h3{
-        padding: 12px 0px 12px 0px;
-        font-size: 20px;
-        font-weight: 700;
-        line-height: 24.38px;
-        color: #ffffff;
-        text-align: center;
-    }
+.categoriesText span {
+    padding: 0rem;
+}
 
-
-    .spanCategoriesText{
-        margin-right: 8px ;
-
-    }
-
-    .categoriesText span {
-        padding: 0px;
-    }
 }
