--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ header {
     font-size: 1.25rem;
     font-weight: 700;
     line-height: 1.5rem;
+    white-space: nowrap;
 }
 
 .mostRecentPosts a {
@@ -113,6 +114,7 @@ header {
     font-size: 0.875rem;
     font-weight: 500;
     line-height: 1.06rem;
+    white-space: nowrap;
 }
 
 .posts {
@@ -285,131 +287,99 @@ footer {
 
 /* MOBILE */
 
-@media only screen and (max-width: 768px)  {
-header {
-    padding: 0.75rem 0rem 0.75rem 0rem;
-    font-family: Montserrat;
-    font-size: 1.5rem;
-    font-weight: 700;
-    text-align: center;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 1.5rem 0.5rem 0rem 1rem;
-}
-
-.highlight img {
-    width: 23rem;
-    height: 24.75rem;
-    padding: 0rem 0rem 0rem 0rem;
-    gap: 0.625rem;
-    border-radius: 0.625rem;
-    align-items: center;
-    text-align: center;
-}
-
-.text-overlay h3 {
-    font-size: 1.5rem;
-    font-weight: 700;
-    text-align: start;
-    line-height: 1.83rem;
-    display: block;
-    word-wrap: break-word;
-    white-space: normal;
-    max-width: 12.5rem;
-}
-
-.mostRecentPosts {
-    display: flex;
-    align-items: center;
-    border-radius: 0.625rem;
-    background: #02A28F;
-    margin: 0px 0.5rem 0.75rem 0rem;
-}
-
-.mostRecentPosts h2 {
-    margin: 0.5rem 0rem 0.5rem 1rem;
-    color: #ffffff;
-    font-size: 1.25rem;
-    font-weight: 700;
-    line-height: 1.525rem;
-    white-space: nowrap;
-}
-
-.mostRecentPosts a {
-    margin: 0rem 0rem 0rem 3.125rem;
-    color: #ffffff;
-    font-size: 0.875rem;
-    font-weight: 500;
-    line-height: 1.067rem;
-    white-space: nowrap;
-}
-
-.post {
-    border-radius: 0.5rem;
-    overflow: hidden;
-    margin-right: 0.5rem;
-    box-shadow: 0.3125rem 0.3125rem 0.625rem rgba(0, 0, 0, 0.13);
-    margin-bottom: 1.5rem;
-}
-
-.posts {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.popularPosts {
-    background-color: #02A28F;
-    border-radius: 0.625rem;
-    width: 95%;
-    height: auto;
-    text-align: center;
-    padding: 0rem;
-}
-
-.popularPosts h3 {
-    color: #ffffff;
-    font-size: 1.25rem;
-    font-weight: 700;
-    line-height: 1.525rem;
-    padding: 0.75rem 0rem 0.75rem 0rem;
-    margin-bottom: 0rem;
-}
-
-.sidebarbg {
-    width: 60%;
-    height: auto;
-    box-shadow: 0.3125rem 0.3125rem 0.625rem rgba(0, 0, 0, 0.13);
-    margin: 0.9375rem auto;
-}
-
-#categories {
-    background: #02A28F;
-    border-radius: 0.625rem;
-    width: 97%;
-    height: auto;
-}
-
-#categories h3 {
-    padding: 0.75rem 0rem 0.75rem 0rem;
-    font-size: 1.25rem;
-    font-weight: 700;
-    line-height: 1.525rem;
-    color: #ffffff;
-    text-align: center;
-}
-
-.spanCategoriesText {
-    margin-right: 0.5rem;
-}
-
-.categoriesText span {
-    padding: 0rem;
-}
-
+lock;
+        word-wrap: break-word;
+        white-space: normal;
+        max-width: 12.5rem;
+    }
+    
+    .mostRecentPosts {
+        display: flex;
+        align-items: center;
+        border-radius: 0.625rem;
+        background: #02A28F;
+        margin: 0px 0.5rem 0.75rem 0rem;
+    }
+    
+    .mostRecentPosts h2 {
+        margin: 0.5rem 0rem 0.5rem 1rem;
+        color: #ffffff;
+        font-size: 1.25rem;
+        font-weight: 700;
+        line-height: 1.525rem;
+        white-space: nowrap;
+    }
+    
+    .mostRecentPosts a {
+        margin: 0rem 0rem 0rem 3.125rem;
+        color: #ffffff;
+        font-size: 0.875rem;
+        font-weight: 500;
+        line-height: 1.067rem;
+        white-space: nowrap;
+    }
+    
+    .post {
+        border-radius: 0.5rem;
+        overflow: hidden;
+        margin-right: 0.5rem;
+        box-shadow: 0.3125rem 0.3125rem 0.625rem rgba(0, 0, 0, 0.13);
+        margin-bottom: 1.5rem;
+    }
+    
+    .posts {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .popularPosts {
+        background-color: #02A28F;
+        border-radius: 0.625rem;
+        width: 95%;
+        height: auto;
+        text-align: center;
+        padding: 0rem;
+    }
+    
+    .popularPosts h3 {
+        color: #ffffff;
+        font-size: 1.25rem;
+        font-weight: 700;
+        line-height: 1.525rem;
+        padding: 0.75rem 0rem 0.75rem 0rem;
+        margin-bottom: 0rem;
+    }
+    
+    .sidebarbg {
+        width: 60%;
+        height: auto;
+        box-shadow: 0.3125rem 0.3125rem 0.625rem rgba(0, 0, 0, 0.13);
+        margin: 0.9375rem auto;
+    }
+    
+    #categories {
+        background: #02A28F;
+        border-radius: 0.625rem;
+        width: 97%;
+        height: auto;
+    }
+    
+    #categories h3 {
+        padding: 0.75rem 0rem 0.75rem 0rem;
+        font-size: 1.25rem;
+        font-weight: 700;
+        line-height: 1.525rem;
+        color: #ffffff;
+        text-align: center;
+    }
+    
+    .spanCategoriesText {
+        margin-right: 0.5rem;
+    }
+    
+    .categoriesText span {
+        padding: 0rem;
+    }
+    
 }
